[package]
name = "mmine-primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
strum.workspace = true
strum_macros.workspace = true
send_wrapper.workspace = true
leptos-node-ref.workspace = true
web-sys.workspace = true
leptos_dom.workspace = true
wasm-bindgen.workspace = true
leptos-use.workspace = true
tailwind_fuse.workspace = true
leptos-typed-fallback-show.workspace = true
uuid.workspace = true
futures.workspace = true
web-time.workspace = true
reactive_stores.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr",  "leptos-use/ssr"]
