[package]
name = "mmine-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
tailwind_fuse.workspace = true
mmine-primitives = { path = "../mmine-primitives" }
web-sys.workspace = true
leptos_router.workspace = true
icons = { path = "../icons" }
send_wrapper.workspace = true
leptos-node-ref.workspace = true
reactive_stores.workspace = true
strum.workspace = true
strum_macros.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate",  "mmine-primitives/hydrate"]
ssr = ["leptos/ssr",  "mmine-primitives/ssr"]
